--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </li>
         </ul>
       </section>
-      <!--galery-->
+      <!--_galery_-->
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
