--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <nav>
         <ul>
           <li><a href="#studio">Студия</a></li>
-          <li><a href="#portfolio">Портфолио</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="#contacts">Контакты</a></li>
         </ul>
       </nav>
