--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <title>Home_work_1</title>
@@ -24,7 +26,7 @@
       <nav>
         <ul>
           <li><a href="#studio">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
+          <li><a href="/portfolio.html">Портфолио</a></li>
           <li><a href="#contacts">Контакты</a></li>
         </ul>
       </nav>
