--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <title>portfolio</title>
@@ -104,8 +106,8 @@
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="images/poster-New-Orlean-vs-Golden-Star.jpg" width: 370;
-            height: 294; alt="работа с за ноутбуком">
+            <img src="images/Growing-Business.jpg" width: 370; height: 294;
+            alt="работа с за ноутбуком">
             <h2>Growing Business</h2>
             <p>Приложение</p>
           </li>
