--- a/portfolio.html
+++ b/portfolio.html
@@ -64,49 +64,49 @@
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="images/poster-New-Orlean-vs-Golden-Star.jpg" width: 370;
+            <img src="images/poster-new-orlean-vs-golden-star.jpg" width: 370;
             height: 294; alt="Постер Нью Орлеан против Голден Стар">
             <h2>Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="images/resturant-Seafood.jpg" width: 370; height: 294;
+            <img src="images/resturant-seafood.jpg" width: 370; height: 294;
             alt="логотип ресторана">
             <h2>Ресторан Seafood</h2>
             <p>Приложение</p>
           </li>
           <li>
-            <img src="images/project-Prime.jpg" width: 370; height: 294;
+            <img src="images/project-prime.jpg" width: 370; height: 294;
             alt="наушники">
             <h2>Проект Prime</h2>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="images/project-Boxes.jpg" width: 370; height: 294;
+            <img src="images/project-boxes.jpg" width: 370; height: 294;
             alt="коробки">
             <h2>Проект Boxes</h2>
             <p>Приложение</p>
           </li>
           <li>
-            <img src="images/Inspiration-has-no-Borders.jpg" width: 370; height:
+            <img src="images/inspiration-has-no-borders.jpg" width: 370; height:
             294; alt="ПК Эпл">
             <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="images/Limited-Edition.jpg" width: 370; height: 294;
+            <img src="images/limited-edition.jpg" width: 370; height: 294;
             alt="раскрытый журнал">
             <h2>Издание Limited Edition</h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="images/project-LAB.jpg" width: 370; height: 294;
+            <img src="images/project-lab.jpg" width: 370; height: 294;
             alt="бирка">
             <h2>Проект LAB</h2>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="images/Growing-Business.jpg" width: 370; height: 294;
+            <img src="images/growing-business.jpg" width: 370; height: 294;
             alt="работа с за ноутбуком">
             <h2>Growing Business</h2>
             <p>Приложение</p>
