добавляет цвета, стили

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Home_work_1</title>
+    <title>Home_work_2</title>
   </head>
   <body>
     <!--header-->
-    <header>
-      <a class="webstudio-logo-blue" href="./index.html">
-        <span class="webstudio-logo-black"> Web</span>studio
+    <header class="header">
+      <a class="text-logo" href="./index.html">
+        Web<span class="black-color">Studio</span>
       </a>
       <nav>
-        <ul>
-          <li><a href="#studio">Студия</a></li>
-          <li><a href="/portfolio.html">Портфолио</a></li>
+        <ul class="navigate list">
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="#contacts">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contact list">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
       </ul>
@@ -152,20 +152,18 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <!--footer-->
-      <div>
-        <a class="webstudio-logo-blue" href="./index.html">
-          <span class="webstudio-logo-black"> Web</span>studio
-        </a>
-        <address>
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
-          <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-          </ul>
-        </address>
-      </div>
+      <a class="text-logo" href="./index.html">
+        Web<span class="white-color">Studio</span>
+      </a>
+      <address class="address">
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="contact list">
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
