--- a/portfolio.html
+++ b/portfolio.html
@@ -20,43 +20,44 @@
   <body>
     <!--header-->
     <header>
-      <a class="webstudio-logo-blue" href="./index.html">
-        <span class="webstudio-logo-black"> Web</span>studio
+      <a class="text-logo" href="./index.html">
+        Web<span class="black-color">Studio</span>
       </a>
       <nav>
-        <ul>
-          <li><a href="#studio">Студия</a></li>
+        <ul class="navigate list">
+          <li><a href="./index.html">Студия</a></li>
           <li><a href="#portfolio">Портфолио</a></li>
           <li><a href="#contacts">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contact list">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
       </ul>
     </header>
     <main>
+      <p></p>
       <section>
-        <ul>
+        <ul class="list">
           <li>
-            <button type="button">Все</button>
+            <button class="button" type="button">Все</button>
           </li>
           <li>
-            <button type="button">Веб-сайты</button>
+            <button class="button" type="button">Веб-сайты</button>
           </li>
           <li>
-            <button type="button">Приложения</button>
+            <button class="button" type="button">Приложения</button>
           </li>
           <li>
-            <button type="button">Дизайн</button>
+            <button class="button" type="button">Дизайн</button>
           </li>
           <li>
-            <button type="button">Маркетинг</button>
+            <button class="button" type="button">Маркетинг</button>
           </li>
         </ul>
       </section>
-      <section>
-        <ul>
+      <section class="section-galery">
+        <ul class="list">
           <li>
             <img src="images/tehnokryak.jpg" width: 370; height: 294;
             alt="Веб-сайт-Технокряк">
@@ -114,15 +115,15 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <!--footer-->
       <div>
-        <a class="webstudio-logo-blue" href="./index.html">
-          <span class="webstudio-logo-black"> Web</span>studio
+        <a class="text-logo" href="./index.html">
+          Web<span class="white-color">Studio</span>
         </a>
-        <address>
+        <address class="address">
           <p>г. Киев, пр-т Леси Украинки, 26</p>
-          <ul>
+          <ul class="contact list">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
           </ul>
