--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
       <nav>
         <ul class="navigate list">
           <li><a href="./index.html">Студия</a></li>
-          <li><a href="#portfolio">Портфолио</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="#contacts">Контакты</a></li>
         </ul>
       </nav>
