фикс размеры изображений

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!--block with button-->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">заказать услугу</button>
+        <button style="button" type="button">заказать услугу</button>
       </section>
       <!--difference-->
       <section>
