--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
     </header>
     <main>
       <!--block with button-->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button style="button" type="button">заказать услугу</button>
+      <section class="section-main">
+        <h1>
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
+        <button class="button" type="button">Заказать услугу</button>
       </section>
       <!--difference-->
-      <section>
+      <section class="section-difference">
         <h2>наши особенности</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3>Внимание к деталям</h3>
             <p>
@@ -77,8 +80,8 @@
       </section>
       <!--_galery_-->
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="section-header">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img
               src="images/coding.jpg"
@@ -106,9 +109,9 @@
         </ul>
       </section>
       <!--team-->
-      <section>
-        <h2>наша команда</h2>
-        <ul>
+      <section class="">
+        <h2 class="section-header">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="images/igor_demjanenko.jpg"
