--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!--header-->
-    <header>
+    <header class="header">
       <a class="text-logo" href="./index.html">
         Web<span class="black-color">Studio</span>
       </a>
@@ -36,7 +36,6 @@
       </ul>
     </header>
     <main>
-      <p></p>
       <section>
         <ul class="list">
           <li>
@@ -62,41 +61,50 @@
             <img
               src="./images/tehnokryak.jpg"
               width="370"
-              ;
               height="294"
-              ;
               alt="Веб-сайт-Технокряк"
             />
             <h2>Технокряк</h2>
+            <p></p>
             <p>Веб-сайт</p>
           </li>
           <li>
             <img
               src="./images/poster-new-orlean-vs-golden-star.jpg"
               width="370"
-              ;
               height="294"
-              ;
               alt="Постер Нью Орлеан против Голден Стар"
             />
             <h2>Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/resturant-seafood.jpg" width:="370";
-            height="294"; alt="логотип ресторана">
+            <img
+              src="./images/resturant-seafood.jpg"
+              width="370"
+              height="294"
+              alt="логотип ресторана"
+            />
             <h2>Ресторан Seafood</h2>
             <p>Приложение</p>
           </li>
           <li>
-            <img src="./images/project-prime.jpg" width:="370"; height="294";
-            alt="наушники">
+            <img
+              src="./images/project-prime.jpg"
+              width="370"
+              height="294"
+              alt="наушники"
+            />
             <h2>Проект Prime</h2>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/project-boxes.jpg" width:="370"; height="294";
-            alt="коробки">
+            <img
+              src="./images/project-boxes.jpg"
+              width="370"
+              height="294"
+              alt="коробки"
+            />
             <h2>Проект Boxes</h2>
             <p>Приложение</p>
           </li>
@@ -104,29 +112,39 @@
             <img
               src="./images/inspiration-has-no-borders.jpg"
               width="370"
-              ;
               height="294"
-              ;
               alt="ПК Эпл"
             />
             <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/limited-edition.jpg" width:="370"; height="294";
-            alt="раскрытый журнал">
+            <img
+              src="./images/limited-edition.jpg"
+              width="370"
+              height="294"
+              alt="раскрытый журнал"
+            />
             <h2>Издание Limited Edition</h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/project-lab.jpg" width:="370"; height="294";
-            alt="бирка">
+            <img
+              src="./images/project-lab.jpg"
+              width="370"
+              height="294"
+              alt="бирка"
+            />
             <h2>Проект LAB</h2>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/growing-business.jpg" width:="370"; height="294";
-            alt="работа с за ноутбуком">
+            <img
+              src="./images/growing-business.jpg"
+              width="370"
+              height="294"
+              alt="работа с за ноутбуком"
+            />
             <h2>Growing Business</h2>
             <p>Приложение</p>
           </li>
