заголовок в секции "фильтр примеров работ" для валидации

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </li>
         </ul>
       </section>
-      <!--_galery_-->
+      <!--Чем мы занимаемся-->
       <section>
         <h2 class="section-header">Чем мы занимаемся</h2>
         <ul class="list">
@@ -109,7 +109,7 @@
         </ul>
       </section>
       <!--team-->
-      <section class="">
+      <section class="section-team">
         <h2 class="section-header">Наша команда</h2>
         <ul class="list">
           <li>
