--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,9 @@
       </ul>
     </header>
     <main>
+      <!-- фильтр примеров работ -->
       <section>
+        <h1>filter examples</h1>
         <ul class="list">
           <li>
             <button class="button" type="button">Все</button>
@@ -55,7 +57,8 @@
           </li>
         </ul>
       </section>
-      <section class="section-galery">
+      <!-- секция примеров работ -->
+      <section class="section-exapmles">
         <ul class="list">
           <li>
             <img
