--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         <ul class="list">
           <li>
             <img
-              src="./images/tehnokryak____.jpg"
+              src="./images/tehnokryak.jpg"
               width="370"
               height="294"
               alt="Веб-сайт-Технокряк"
