--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         <ul class="list">
           <li>
             <img
-              src="./images/tehnokryak.jpg"
+              src="/images/tehnokryak.jpg"
               width="370"
               height="294"
               alt="Веб-сайт-Технокряк"
@@ -73,7 +73,7 @@
           </li>
           <li>
             <img
-              src="./images/poster-new-orlean-vs-golden-star.jpg"
+              src="/images/poster-new-orlean-vs-golden-star.jpg"
               width="370"
               height="294"
               alt="Постер Нью Орлеан против Голден Стар"
@@ -83,7 +83,7 @@
           </li>
           <li>
             <img
-              src="./images/resturant-seafood.jpg"
+              src="/images/resturant-seafood.jpg"
               width="370"
               height="294"
               alt="логотип ресторана"
@@ -93,7 +93,7 @@
           </li>
           <li>
             <img
-              src="./images/project-prime.jpg"
+              src="/images/project-prime.jpg"
               width="370"
               height="294"
               alt="наушники"
@@ -103,7 +103,7 @@
           </li>
           <li>
             <img
-              src="./images/project-boxes.jpg"
+              src="/images/project-boxes.jpg"
               width="370"
               height="294"
               alt="коробки"
@@ -113,7 +113,7 @@
           </li>
           <li>
             <img
-              src="./images/inspiration-has-no-borders.jpg"
+              src="/images/inspiration-has-no-borders.jpg"
               width="370"
               height="294"
               alt="ПК Эпл"
@@ -123,7 +123,7 @@
           </li>
           <li>
             <img
-              src="./images/limited-edition.jpg"
+              src="/images/limited-edition.jpg"
               width="370"
               height="294"
               alt="раскрытый журнал"
@@ -133,7 +133,7 @@
           </li>
           <li>
             <img
-              src="./images/project-lab.jpg"
+              src="/images/project-lab.jpg"
               width="370"
               height="294"
               alt="бирка"
@@ -143,7 +143,7 @@
           </li>
           <li>
             <img
-              src="./images/growing-business.jpg"
+              src="/images/growing-business.jpg"
               width="370"
               height="294"
               alt="работа с за ноутбуком"
