--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         <ul class="list">
           <li>
             <img
-              src="images/tehnokryak.jpg"
+              src="./images/tehnokryak.jpg"
               width="370"
               height="294"
               alt="Веб-сайт-Технокряк"
@@ -73,7 +73,7 @@
           </li>
           <li>
             <img
-              src="images/poster-new-orlean-vs-golden-star.jpg"
+              src="./images/poster-new-orlean-vs-golden-star.jpg"
               width="370"
               height="294"
               alt="Постер Нью Орлеан против Голден Стар"
