замечания по дз_14/05/22
добавляет подсветку текущей страницы
жирность 900 для h1
подчеркивание в кнопке
шрифт в кнопке на inherit
цвет ссылок контактов в футере rgba_***0.6
убран лишний абзац в portfolio.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </a>
       <nav>
         <ul class="navigate list">
-          <li><a href="./index.html">Студия</a></li>
+          <li><a href="./index.html" class="active">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="#contacts">Контакты</a></li>
         </ul>
@@ -38,7 +38,7 @@
     <main>
       <!--block with button-->
       <section class="section-main">
-        <h1>
+        <h1 class="section-main">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
