--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
       <nav>
         <ul class="navigate list">
           <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
+          <li><a href="./portfolio.html" class="active">Портфолио</a></li>
           <li><a href="#contacts">Контакты</a></li>
         </ul>
       </nav>
@@ -68,7 +68,6 @@
               alt="Веб-сайт-Технокряк"
             />
             <h2>Технокряк</h2>
-            <p></p>
             <p>Веб-сайт</p>
           </li>
           <li>
